--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -13,11 +13,11 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #178553;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: #11694c;
 }
 
 body {
@@ -43,7 +43,7 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: #046f41;
 }
 button:focus,
 button:focus-visible {
