--- a/frontend/src/pages/RequestDetail.css
+++ b/frontend/src/pages/RequestDetail.css
@@ -72,7 +72,7 @@
 .file-link {
   display: inline-block;
   padding: 0.75rem 1.5rem;
-  background-color: #667eea;
+  background-color: #046f41;
   color: white;
   text-decoration: none;
   border-radius: 5px;
@@ -80,7 +80,7 @@
 }
 
 .file-link:hover {
-  background-color: #5568d3;
+  background-color: #046f41;
 }
 
 .extracted-data {
